# FYP_ARProgram

./: .classpath  .gitignore  .project  README.md  colors.scheme.xml  editor.xml  filetypes.xml  find.xml  jdk.table.xml  project.default.xml  settings.gradle  ui.lnf.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chenyue/fyparapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: arrow.frag  arrow.vert  text.frag  text.vert
app/src/main/cpp/: CMakeLists.txt  FreetypeJNI.h  readFont.cpp
app/src/main/freetypeC/: readFont.cpp
app/src/main/java/chenyue/arfyp/helloar/: HelloArActivity.java  MainActivity.java  trackingOverlay.java
app/src/main/java/chenyue/arfyp/navigation/: CoordsCalculation.java  DistanceEstimation.java  Navigation.java
app/src/main/java/chenyue/arfyp/userviews/: MainActivity.java  MapOverlay.java  SearchActivity.java  trackingOverlay.java
app/src/main/res/layout/: activity_main.xml  activity_search.xml
app/src/main/res/values/: strings.xml
colors/: Raven_s style.icls  _@user_Darcula.icls  _@user_Default.icls
distribution/: introduction.md
gradle/wrapper/: gradle-wrapper.properties
keymaps/: Default for XWin copy.xml
tensorflowdetection/: build.gradle
tensorflowdetection/src/main/: AndroidManifest.xml
tensorflowdetection/src/main/cpp/: CMakeLists.txt  imageutils_jni.cc  rgb2yuv.h  yuv2rgb.h
tensorflowdetection/src/main/res/values/: strings.xml
tools/arcoreimg/linux/: marker_database-imglist.txt  marker_database.imgdb
(+23 files in other folders)
